# AITeams

./: .gitignore  README.md  pyproject.toml  test-warning.sqlite
aimemory/: __init__.py  api.py  config.py  errors.py  filters.py  ids.py  outbox.py  scope.py  serialization.py  state.py  types.py
aimemory/algorithms/: __init__.py  affinity.py  compression.py  dedupe.py  distill.py  retrieval.py  segmentation.py
aimemory/backends/: __init__.py  base.py  defaults.py  registry.py
aimemory/catalog/: __init__.py  schema.py  sqlite_store.py
aimemory/core/: __init__.py  capabilities.py  domain_api.py  facade.py  governance.py  router.py  scope.py  scoped.py  settings.py  structured_api.py  text.py  utils.py
aimemory/hotstore/: __init__.py  lmdb_store.py
aimemory/mcp/: __init__.py  adapter.py
aimemory/memory_intelligence/: __init__.py  models.py  pipeline.py  policies.py  semantic_categories.py
aimemory/pipeline/: __init__.py  lifecycle.py  maintenance.py  read_path.py  recovery.py  write_path.py
aimemory/plugins/: __init__.py  protocols.py
aimemory/providers/: __init__.py  base.py  defaults.py  embeddings.py  factory.py
aimemory/querying/: __init__.py  filters.py
aimemory/services/: archive_service.py  base.py  execution_service.py  interaction_service.py  knowledge_service.py  memory_service.py  projection_service.py  retrieval_service.py  skill_service.py
aimemory/storage/: plugins.py  policy.py
aimemory/vector/: __init__.py  embeddings.py  lancedb_store.py
aimemory/workers/: __init__.py  cleaner.py  compactor.py  distiller.py  governor.py  projector.py
aiteams/: __init__.py  __main__.py  ai_gateway.py  app.py  catalog.py  config.py  memory_service.py  platform_db.py  repositories.py  review_policies.py  review_policy_migration.py  role_specs.py  schemas.py  skill_utils.py  utils.py
aiteams/agent/: __init__.py  kernel.py
aiteams/agent_center/: __init__.py  defaults.py  resolver.py  service.py  team_graph.py
doc/: 插件最小示例.md  插件编写指引.md
scripts/: migrate_review_policies.py
tests/: download_local_bge_models.py  test1.py  test_ai_gateway.py  test_app.py  test_builtin_kb_plugin.py  test_deepagents_message_sanitizer.py  test_demo_cmd_echo_plugin.py  test_example_plugins.py  test_memory_store.py  test_plugin_upload_import.py  test_retrieval_settings.py  test_skill_library.py
(+81 files in other folders)
