[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-teams"
version = "0.1.0"
description = "Multi-agent collaboration platform backed by sqlite and aimemory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "litellm>=1.82,<2",
]

[tool.setuptools.packages.find]
include = ["aiteams*", "aimemory*"]

[tool.setuptools.package-data]
aiteams = ["static/*.html", "static/*.css", "static/*.js"]
