[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-teams"
version = "0.1.0"
description = "Multi-agent collaboration platform backed by official LangGraph and LangMem."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "deepagents>=0.4,<0.5",
  "langgraph>=1.1,<2",
  "langmem>=0.0.30,<1",
  "lmdb>=1.6,<2",
  "lancedb>=0.24,<1",
  "pyarrow>=18,<22",
  "PyYAML>=6",
]

[project.optional-dependencies]
models = [
  "langchain-litellm>=0.6,<1",
]

[tool.setuptools.packages.find]
include = ["aiteams*", "aimemory*"]

[tool.setuptools.package-data]
aiteams = ["static/*.html", "static/*.css", "static/*.js"]
